# discord-autodelete

./: Cargo.toml  Dockerfile  README.md  deny.toml  shell.nix
.github/workflows/: rust.yml
src/: client.rs  config.rs  deleter.rs  error.rs  login.rs  main.rs  messages.rs  types.rs
src/controller/: error.rs  mod.rs  traits.rs
src/controller/dry_run/: mod.rs
src/controller/http/: controller.rs  mod.rs  namer.rs
src/controller/stub/: mod.rs
src/messages/: controller.rs  dry_run.rs  error.rs  getter.rs  mod.rs  namer.rs  stubs.rs  traits.rs
