[package]
name = "discord-autodelete"
version = "0.1.0"
edition = "2021"
author = "JJ Brown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11" , features = ["model", "http", "client", "builder"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.74"
futures = "0.3.29"
